[package]
name = "game"
version = "0.1.0"
authors = ["Joe Burnard <joe.burnard@nandos.co.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.5", features = ["dynamic"] }
rand = "0.8"
bevy_fly_camera = "0.7"
bevy_rapier3d = "0.9.0"
rapier3d = "0.8.0"
bevy_render = "0.5.0"
